website/i18n/zh-CN/docusaurus-plugin-content-docs/version-2.x/api/plugins/plugin-pwa.mdx
---
sidebar_position: 9
slug: /api/plugins/@docusaurus/plugin-pwa
---

# 📦 plugin-pwa

Docusaurus 插件，通过 [Workbox](https://developers.google.com/web/tools/workbox) 添加 PWA 支持。该插件仅在生产构建时生成 [Service Worker](https://developers.google.com/web/fundamentals/primers/service-workers)，使您的文档站点具备完整的 PWA 功能，包括离线访问和安装支持。

## 安装 {#installation}

```bash npm2yarn
npm install --save @docusaurus/plugin-pwa
```

## 配置 {#configuration}

在 `./static/manifest.json` 创建 [PWA 清单文件](https://web.dev/add-manifest/)。

修改 `docusaurus.config.js` 添加最小化 PWA 配置，例如：

```js title="docusaurus.config.js"
module.exports = {
  plugins: [
    [
      '@docusaurus/plugin-pwa',
      {
        debug: true,
        offlineModeActivationStrategies: [
          'appInstalled',
          'standalone',
          'queryString',
        ],
        pwaHead: [
          {
            tagName: 'link',
            rel: 'icon',
            href: '/img/docusaurus.png',
          },
          {
            tagName: 'link',
            rel: 'manifest',
            href: '/manifest.json', // your PWA manifest
          },
          {
            tagName: 'meta',
            name: 'theme-color',
            content: 'rgb(37, 194, 160)',
          },
        ],
      },
    ],
  ],
};
```

## 渐进式 Web 应用 {#progressive-web-app}

仅部署 Service Worker 不足以使您的应用成为 PWA。您至少需要包含 [Web 应用清单](https://developer.mozilla.org/zh-CN/docs/Web/Manifest) 并在 `<head>` 中添加正确的标签（参见 [选项 > pwaHead](#pwahead)）。

部署后，您可以使用 [Lighthouse](https://developers.google.com/web/tools/lighthouse) 对站点进行审计。

更完整的 PWA 实现要求，请参阅 [PWA 检查清单](https://developers.google.com/web/progressive-web-apps/checklist)

## 应用安装支持 {#app-installation-support}

如果浏览器支持，您可以将 Docusaurus 站点作为应用安装。

![应用安装流程的屏幕录制。浏览器地址栏出现安装按钮，点击后显示"安装此应用？"的对话框。点击"安装"按钮后，操作系统将打开一个新应用窗口并加载 Docusaurus 首页。](/img/pwa_install.gif)

:::note

应用安装需要 HTTPS 协议和有效的清单文件。

:::

## 离线模式（预缓存） {#offline-mode-precaching}

通过 Service Worker 预缓存技术，用户可离线浏览 Docusaurus 站点。

[workbox-precaching](https://developers.google.com/web/tools/workbox/modules/workbox-precaching) 页面阐述了其原理：

> Service Worker 的核心特性之一是在安装阶段将文件集合保存至缓存，此过程通常称为"预缓存"。开发者由此获得缓存控制权，可决定文件缓存时机、持续时间，并能直接向浏览器提供缓存内容（无需网络请求），从而实现离线化 Web 应用。
>
> Workbox 通过简化的 API 和高效的资源下载机制，大幅降低了预缓存实现复杂度。

默认情况下，当站点作为应用安装时会启用离线模式。详见 `offlineModeActivationStrategies` 选项说明。

站点预缓存后，Service Worker 将为后续访问提供缓存响应。当新构建版本部署时，新版 Service Worker 开始安装并进入等待状态，此时将显示刷新弹窗提示用户更新内容。在用户清除应用缓存或点击弹窗的`刷新`按钮前，Service Worker 会持续提供旧版内容。

:::warning

离线模式/预缓存需要提前下载所有静态资源，可能消耗不必要的带宽。并非所有类型的站点都适合启用此功能。

:::

## 选项 {#options}

### `debug` {#debug}

- 类型: `boolean`
- 默认值: `false`

启用调试模式：

- Workbox日志
- 额外的Docusaurus日志
- 未经优化的SW文件输出
- 源代码映射

### `offlineModeActivationStrategies` {#offlinemodeactivationstrategies}

- 类型: `('appInstalled' | 'mobile' | 'saveData'| 'queryString' | 'always')[]`
- 默认值: `['appInstalled', 'queryString', 'standalone']`

激活离线模式的策略：

- `appInstalled`: 为已安装站点应用的用户激活（并非100%可靠）
- `standalone`: 为以独立应用模式运行的用户激活（通常是PWA安装后的状态）
- `queryString`: 当查询字符串包含`offlineMode=true`时激活（便于PWA调试）
- `mobile`: 为移动端用户激活（`width <= 996px`）
- `saveData`: 为`navigator.connection.saveData === true`的用户激活
- `always`: 为所有用户激活

:::warning

谨慎使用：部分用户可能不喜欢被强制使用离线模式。

:::

:::danger

目前无法以非常可靠的方式检测应用是否作为PWA安装。

`appinstalled`事件已[从规范中移除](https://github.com/w3c/manifest/pull/836)，且[`navigator.getInstalledRelatedApps()`](https://web.dev/get-installed-related-apps/)API仅在最新版Chrome中受支持，并要求在manifest中声明`related_applications`。

[`standalone`策略](https://petelepage.com/blog/2019/07/is-my-pwa-installed/)是激活离线模式的良好备选方案（至少在运行已安装应用时有效）。

:::

### `injectManifestConfig` {#injectmanifestconfig}

传递给`workbox.injectManifest()`的[Workbox配置项](https://developer.chrome.com/docs/workbox/reference/workbox-build/#type-InjectManifestOptions)。通过此参数可控制哪些资源将被预缓存并支持离线访问。

- 类型: `InjectManifestOptions`
- 默认值: `{}`

```js title="docusaurus.config.js"
module.exports = {
  plugins: [
    [
      '@docusaurus/plugin-pwa',
      {
        injectManifestConfig: {
          manifestTransforms: [
            //...
          ],
          modifyURLPrefix: {
            //...
          },
          // We already add regular static assets (HTML, images...) to be available offline
          // You can add more files according to your needs
          globPatterns: ['**/*.{pdf,docx,xlsx}'],
          // ...
        },
      },
    ],
  ],
};
```

### `pwaHead` {#pwahead}

- 类型: `({ tagName: string; [attributeName: string]: string })[]`
- 默认值: `[]`

包含`tagName`和键值对属性的对象数组，用于注入到`<head>`标签。技术上可通过此方式注入任何head标签，但理想情况下应用于使站点符合PWA规范的标签。以下是使应用完全合规的推荐标签列表：

```js
module.exports = {
  plugins: [
    [
      '@docusaurus/plugin-pwa',
      {
        pwaHead: [
          {
            tagName: 'link',
            rel: 'icon',
            href: '/img/docusaurus.png',
          },
          {
            tagName: 'link',
            rel: 'manifest',
            href: '/manifest.json',
          },
          {
            tagName: 'meta',
            name: 'theme-color',
            content: 'rgb(37, 194, 160)',
          },
          {
            tagName: 'meta',
            name: 'apple-mobile-web-app-capable',
            content: 'yes',
          },
          {
            tagName: 'meta',
            name: 'apple-mobile-web-app-status-bar-style',
            content: '#000',
          },
          {
            tagName: 'link',
            rel: 'apple-touch-icon',
            href: '/img/docusaurus.png',
          },
          {
            tagName: 'link',
            rel: 'mask-icon',
            href: '/img/docusaurus.svg',
            color: 'rgb(37, 194, 160)',
          },
          {
            tagName: 'meta',
            name: 'msapplication-TileImage',
            content: '/img/docusaurus.png',
          },
          {
            tagName: 'meta',
            name: 'msapplication-TileColor',
            content: '#000',
          },
        ],
      },
    ],
  ],
};
```

### `swCustom` {#swcustom}

- 类型: `string | undefined`
- 默认值: `undefined`

用于添加自定义Workbox规则。此处可实现服务工作者支持的所有功能，并充分利用workbox库的能力。代码会被转译，因此可使用现代ES6+语法。

例如缓存外部路由文件：

```js
import {registerRoute} from 'workbox-routing';
import {StaleWhileRevalidate} from 'workbox-strategies';

// default fn export receiving some useful params
export default function swCustom(params) {
  const {
    debug, // :boolean
    offlineMode, // :boolean
  } = params;

  // Cache responses from external resources
  registerRoute((context) => {
    return [
      /graph\.facebook\.com\/.*\/picture/,
      /netlify\.com\/img/,
      /avatars1\.githubusercontent/,
    ].some((regex) => context.url.href.match(regex));
  }, new StaleWhileRevalidate());
}
```

该模块应导出`default`函数，并接收若干参数。

### `swRegister` {#swregister}

- 类型: `string | false`
- 默认值: `'docusaurus-plugin-pwa/src/registerSW.js'`

在Docusaurus应用前添加注册入口，确保注册流程在应用运行前完成。默认的`registerSW.js`文件已满足基本注册需求。

传入`false`将完全禁用注册功能。

## Manifest示例 {#manifest-example}

Docusaurus 站点清单可作为参考：

import CodeBlock from '@theme/CodeBlock';

<CodeBlock className="language-json">
  {JSON.stringify(require("@site/static/manifest.json"),null,2)}
</CodeBlock>

## 自定义重新加载弹窗 {#customizing-reload-popup}

当有新服务工作者等待安装时，会渲染 `@theme/PwaReloadPopup` 组件，并向用户建议重新加载。您可以[置换](../../swizzling.mdx)该组件并实现自己的用户界面。该组件会接收一个 `onReload` 回调作为属性，应在点击"刷新"按钮时调用此回调。这将通知服务工作者安装等待中的服务工作者并重新加载页面。

默认主题包含重新加载弹窗的实现，并使用 [Infima 警告框](https://infima.dev/docs/components/alert)。

![重新加载过程的屏幕录制。窗口右下角显示一个警告框，提示"有新内容可用"。点击"刷新"按钮后，页面主标题从"简介"变为"PWA :))"。](/img/pwa_reload.gif)

您的组件可以渲染 `null`，但不建议这样做：用户将无法获取最新内容。